--- a/db_container/Dockerfile
+++ b/db_container/Dockerfile
@@ -1,10 +1,11 @@
-FROM ubuntu:latest
+FROM ubuntu:16.04
 MAINTAINER Federico Tomassetti
 
+RUN apt-get update
 RUN apt-get install -y wget
 RUN echo "deb http://apt.postgresql.org/pub/repos/apt/ trusty-pgdg main" >> /etc/apt/sources.list.d/pgdg.list
 
-RUN wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
+RUN wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add -
 
 RUN apt-get update
 RUN apt-get install -y python-software-properties software-properties-common
@@ -17,11 +18,11 @@ RUN echo "listen_addresses='*'" >> /etc/postgresql/9.4/main/postgresql.conf
 ADD ./setup.sql /db/setup.sql
 ADD ./schema.sql /db/schema.sql
 
-RUN /etc/init.d/postgresql start && sudo -u postgres psql < /db/setup.sql && /etc/init.d/postgresql stop
-RUN /etc/init.d/postgresql start && sudo -u postgres psql -d blog < /db/schema.sql && /etc/init.d/postgresql stop
+USER postgres
+
+RUN /etc/init.d/postgresql start && psql < /db/setup.sql && /etc/init.d/postgresql stop
+RUN /etc/init.d/postgresql start && psql -d blog < /db/schema.sql && /etc/init.d/postgresql stop
 
 EXPOSE 5432
-
-USER postgres
 
 CMD ["/usr/lib/postgresql/9.4/bin/postgres", "-D", "/var/lib/postgresql/9.4/main", "-c", "config_file=/etc/postgresql/9.4/main/postgresql.conf"]
